--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.7",
     "@next/font": "13.1.6",
+    "firebase": "^9.17.1",
     "framer-motion": "^9.0.1",
     "heroicons": "^2.0.14",
     "next": "13.1.6",
