--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.7",
     "@next/font": "13.1.6",
+    "autoprefixer": "^10.4.13",
     "firebase": "^9.17.1",
     "framer-motion": "^9.0.1",
     "heroicons": "^2.0.14",
@@ -22,6 +23,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.1",
     "react-simple-typewriter": "^5.0.1",
-    "react-social-icons": "^5.15.0"
+    "react-social-icons": "^5.15.0",
+    "tailwindcss": "^3.2.6"
   }
 }
